@@ -33,8 +33,8 @@ public class MovieServiceTest {
     @Test
     public void testFindAll() {
         List<Movie> mockMovieList = List.of(
-                createMockMovie(1, "Catch Me If You Can", "Action"),
-                createMockMovie(2, "The Matrix", "Science Fiction")
+                new Movie(1L, "Catch Me If You Can", "A mind-bending thriller", LocalDate.of(2003, 1, 24), 141, "Action", 8.1f, "http://image1.jpg", null, null, null, null),
+                new Movie(2L, "The Matrix", "A hacker discovers reality", LocalDate.of(1999, 3, 31), 136, "Science Fiction", 8.7f, "http://image2.jpg", null, null, null, null)
         );
         List<MovieOutDto> modelMapperOut = List.of(
                 new MovieOutDto(1L, "Catch Me If You Can", "A mind-bending thriller", "Action", 8.1f, "http://image1.jpg"),
@@ -44,48 +44,35 @@ public class MovieServiceTest {
         when(movieRepository.findAll()).thenReturn(mockMovieList);
         when(modelMapper.map(mockMovieList, new TypeToken<List<MovieOutDto>>() {}.getType())).thenReturn(modelMapperOut);
 
-        List<MovieOutDto> actualMovieList = movieService.findAll("");
+        List<MovieOutDto> actualMovieList = movieService.findAll(null, null, null, null);
         assertEquals(2, actualMovieList.size());
-        assertEquals("Catch Me If You Can", actualMovieList.get(0).getTitle());
-        assertEquals("The Matrix", actualMovieList.get(1).getTitle());
+        assertEquals("Catch Me If You Can", actualMovieList.getFirst().getTitle());
+        assertEquals("The Matrix", actualMovieList.getLast().getTitle());
 
         verify(movieRepository, times(1)).findAll();
-        verify(movieRepository, times(0)).findByGenre("");
+        verify(movieRepository, times(0)).findByGenre("Action");
     }
 
     @Test
     public void testFindAllByGenre() {
         List<Movie> mockMovieList = List.of(
-                createMockMovie(1, "Catch Me If You Can", "Action"),
-                createMockMovie(2, "Interstellar", "Science Fiction")
+                new Movie(1L, "Catch Me If You Can", "A mind-bending thriller", LocalDate.of(2003, 1, 24), 141, "Action", 8.1f, "http://image1.jpg", null, null, null, null),
+                new Movie(2L, "The Matrix", "A hacker discovers reality", LocalDate.of(1999, 3, 31), 132, "Science Fiction", 8.7f, "http://image2.jpg", null, null, null, null)
         );
         List<MovieOutDto> mockModelMapperOut = List.of(
-                new MovieOutDto(1L, "Catch Me If You Can", "A mind-bending thriller", "Action", 8.8f, "http://image1.jpg"),
-                new MovieOutDto(2L, "Interstellar", "Space exploration", "Science Fiction", 8.6f, "http://image2.jpg")
+                new MovieOutDto(1L, "Catch Me If You Can", "A mind-bending thriller", "Action", 8.1f, "http://image1.jpg"),
+                new MovieOutDto(2L, "The Matrix", "A hacker discovers reality", "Science Fiction", 8.7f, "http://image2.jpg")
         );
 
         when(movieRepository.findByGenre("Action")).thenReturn(mockMovieList);
         when(modelMapper.map(mockMovieList, new TypeToken<List<MovieOutDto>>() {}.getType())).thenReturn(mockModelMapperOut);
 
-        List<MovieOutDto> actualMovieList = movieService.findAll("Action");
+        List<MovieOutDto> actualMovieList = movieService.findAll("Action", null, null, null);
         assertEquals(2, actualMovieList.size());
-        assertEquals("Catch Me If You Can", actualMovieList.get(0).getTitle());
-        assertEquals("Interstellar", actualMovieList.get(1).getTitle());
+        assertEquals("Catch Me If You Can", actualMovieList.getFirst().getTitle());
+        assertEquals("The Matrix", actualMovieList.getLast().getTitle());
 
         verify(movieRepository, times(0)).findAll();
         verify(movieRepository, times(1)).findByGenre("Action");
-    }
-
-    private Movie createMockMovie(long id, String title, String genre) {
-        Movie movie = new Movie();
-        movie.setId(id);
-        movie.setTitle(title);
-        movie.setSynopsis("Synopsis for " + title);
-        movie.setGenre(genre);
-        movie.setReleaseDate(LocalDate.of(2003, 01, 24));
-        movie.setDuration(141);
-        movie.setAverageRating(8.1f);
-        movie.setImageUrl("http://image.jpg");
-        return movie;
     }
 }
